Fix another CSS overlap issue

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -354,6 +354,7 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
+    z-index: 17;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     background-color: #fff
@@ -1054,7 +1055,7 @@ _:-ms-lang(x) {
     margin-bottom: 0;
     border-radius: 0;
     background-color: #fff;
-    z-index: 1;
+    z-index: 18;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, .15)
 }
